# MIPTSTONE_GAME

./: README.md  README_TO_INSTALL.txt
MIPTSTONE/: CMakeLists.txt  REINSTALL.sh  RUN.sh  UNINSTALL.sh  base_parse.py  card_database.txt
MIPTSTONE/home/: fight.cpp  main.cpp
MIPTSTONE/include/Card/: PrintCard.h  ViewCard.h
MIPTSTONE/include/Create_Unit/: Create_unit.h
MIPTSTONE/include/Interaction/: interaction.h
MIPTSTONE/include/Stub/: Stub.h
MIPTSTONE/include/Units/: Card.h
MIPTSTONE/include/menu/: MYmenu.h
MIPTSTONE/src/: CMakeLists.txt  main.cpp
MIPTSTONE/src/Card/: PrintCard.cpp  viewCard.cpp
MIPTSTONE/src/Create_Unit/: create_single_unit.cpp  create_unit.cpp
MIPTSTONE/src/Game-core/: CMakeLists.txt  Card.cpp  Card.h  PrintCard.cpp  game-engine.cpp  game-engine.h  lib_cards.cpp  lib_cards.h
MIPTSTONE/src/Stub/: Stub.cpp
MIPTSTONE/src/UI/: CMakeLists.txt  MainMenu.cpp  MainMenu.h
MIPTSTONE/src/Units/: Card.cpp  lib_cards.cpp
MIPTSTONE/src/Units/prepods/: base_parse.py  card_database.txt
MIPTSTONE/src/logo/: menu.cpp
